--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container">
-      <a href="https://azami-ayako.amebaownd.com/pages/2101407/blog">
+      <a href="#">
         <h1>Body Potential</h1>
       </a>
       <a href="https://azami-ayako.amebaownd.com/pages/3799413/page_202004271417" class="btn">体験してみる</a>
